# ChildObjectRecognition

./: README.md  main.py  pyproject.toml
app/: __init__.py  kids_core.py  kids_gui.py
cor_io/: __init__.py  camera_utils.py
detection/: api.py  cli.py  coco_intros_cn.py  coco_labels_cn.py  core.py  kids_api.py
docs/: STRUCTURE.md
voice/: __init__.py  announce.py  tts.py  tts_queue.py
