[project]
name = "childobjectrecognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"ultralytics>=8.3.0",
	"opencv-python>=4.9.0.80",
	"numpy>=1.26",
	"PySide6>=6.6",
	"pyttsx3>=2.90",
	"pywin32>=305; platform_system=='Windows'",
]
